--- a/translations/ru.json
+++ b/translations/ru.json
@@ -1,5 +1,7 @@
 {
   "NM": "ТС",
+  "NAV_1": "Список",
+  "NAV_2": "Карта",
   "CARGO": "грузовой",
   "PASSENGER": "пассажирский",
   "SPECIAL": "спецтранспорт"
