--- a/translations/en.json
+++ b/translations/en.json
@@ -1,8 +1,12 @@
 {
   "NM": "TV",
-  "NAV_1": "List",
-  "NAV_2": "Map",
+  "NAV_1": "list",
+  "NAV_2": "map",
   "CARGO": "cargo",
   "PASSENGER": "passenger",
-  "SPECIAL": "special"
+  "SPECIAL": "special",
+
+  "CATEGORY": "type",
+  "DRIVER": "driver",
+  "DRIVER_PHONE": "phone"
 }
