--- a/translations/ru.json
+++ b/translations/ru.json
@@ -1,8 +1,12 @@
 {
   "NM": "ТС",
-  "NAV_1": "Список",
-  "NAV_2": "Карта",
+  "NAV_1": "список",
+  "NAV_2": "карта",
   "CARGO": "грузовой",
   "PASSENGER": "пассажирский",
-  "SPECIAL": "спецтранспорт"
+  "SPECIAL": "спецтранспорт",
+
+  "CATEGORY": "категория",
+  "DRIVER": "водитель",
+  "DRIVER_PHONE": "номер"
 }
