fixed the map filter and made some improvements

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,5 +17,8 @@
   "LANG": "Language",
 
   "RU": "Russian",
-  "EN": "English"
+  "EN": "English",
+
+  "CALL": "To call",
+  "SEND": "To write"
 }
