--- a/locales/ru.json
+++ b/locales/ru.json
@@ -17,5 +17,8 @@
   "LANG": "Язык",
 
   "RU": "Русский",
-  "EN": "Английский"
+  "EN": "Английский",
+
+  "CALL": "Позвонить",
+  "SEND": "Написать"
 }
